[package]
name = "noalloc-slip-rs"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Jérémy Audiger", "Kamel Azira"]
edition = "2024"
rust-version = "1.90"
readme = "README.md"
repository = "https://github.com/jaudiger/noalloc-slip-rs"
description = """
A no-std SLIP (Serial Line Internet Protocol) encoder and decoder implementation.
"""
categories = ["no-std"]
keywords = ["static", "no-heap"]

[dependencies]
noalloc-vec-rs = "0.1.1"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
panic = "abort"
strip = "symbols"
